--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/Users/mridulregmi/Library/Application Support/NetBeans/12.4/build.properties
+user.properties.file=C:\\Users\\knd18\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
