--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
 jlink.launcher.name=StockOps
-main.class=userinterface.MainJFrame
+main.class=com.stockops.UI.MainJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
