--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,8 @@ compile.on.save=false
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.jcalendar-1.4.jar=C:\\Users\\manju\\Desktop\\jcalendar-1.4.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/Users/mridulregmi/Library/Application Support/NetBeans/12.4/build.properties
+user.properties.file=C:\\Users\\manju\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
