--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,4 +6,4 @@ file.reference.jcalendar-1.4.jar=C:\\Users\\manju\\Desktop\\jcalendar-1.4.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\knd18\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
+user.properties.file=/Users/mridulregmi/Library/Application Support/NetBeans/12.4/build.properties
