--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,12 +34,18 @@ excludes=
 file.reference.AbsoluteLayout.jar=AbsoluteLayout.jar
 file.reference.db4o-8.0.184.15484-all-java5.jar-1=db4o-8.0.184.15484-all-java5.jar
 file.reference.jcalendar-1.4.jar=/Users/mridulregmi/Downloads/jcalendar-1/lib/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=/Users/mridulregmi/Downloads/jcalendar-1/lib/jcalendar-1.4.jar
+file.reference.jcommon-1.0.23.jar=/Users/mridulregmi/Downloads/JFreeChart/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=/Users/mridulregmi/Downloads/JFreeChart/jfreechart-1.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.db4o-8.0.184.15484-all-java5.jar-1}:\
     ${file.reference.AbsoluteLayout.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
